--- a/MdXaml/MdXaml.csproj
+++ b/MdXaml/MdXaml.csproj
@@ -36,13 +36,13 @@
     <Reference Include="System.Net.Http" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' Or '$(TargetFramework)' == 'net462' ">
     <PackageReference Include="AvalonEdit" Version="6.0.0" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net45' ">
+  <!--<ItemGroup Condition=" '$(TargetFramework)' != 'net45' ">
     <PackageReference Include="AvalonEdit" Version="6.3.0.90" />
-  </ItemGroup>
+  </ItemGroup>-->
 
   <ItemGroup>
     <ProjectReference Include="..\MdXaml.Plugins\MdXaml.Plugins.csproj" />
