--- a/MdXaml/MdXaml.csproj
+++ b/MdXaml/MdXaml.csproj
@@ -32,8 +32,7 @@
     <Page Remove="MarkdownMigFree.Style.xaml" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' Or '$(TargetFramework)' == 'net462'">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net472' Or '$(TargetFramework)' == 'net45' Or '$(TargetFramework)' == 'net462' ">
     <Reference Include="System.Net.Http" />
   </ItemGroup>
 
